--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -1071,6 +1071,10 @@
       font-size: 2.25rem;
       line-height: 2.5rem;
     }
+    .sm\:text-5xl {
+      font-size: 3rem;
+      line-height: 1;
+    }
   }
   @media (min-width: 768px) {
     .md\:w-auto {
