--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -400,6 +400,9 @@
   .mt-11 {
   margin-top: 2.75rem;
   }
+  .mt-12 {
+  margin-top: 3rem;
+  }
   .mt-16 {
     margin-top: 4rem;
   }
@@ -746,6 +749,9 @@
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
   }
+  .bg-purple-500 {
+    background-color: var(--color-purple-500);
+  }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
   }
@@ -933,6 +939,9 @@
   .text-green-500 {
     color: var(--color-green-500);
   }
+  .text-green-600 {
+    color: var(--color-green-600);
+  }
   .text-yellow-500 {
     color: var(--color-yellow-500);
   }
@@ -1004,6 +1013,9 @@
   .hover\:border-indigo-600:hover {
     border-color: var(--color-indigo-600);
   }
+  .hover\:bg-indigo-600:hover {
+    background-color: var(--color-indigo-600);
+  }
   .hover\:bg-indigo-700:hover {
     background-color: var(--color-indigo-700);
   }
@@ -1033,6 +1045,9 @@
   }
   .hover\:text-purple-600:hover {
     color: var(--color-purple-600);
+  }
+  .hover\:text-white:hover {
+    color: var(--color-white);
   }
   .hover\:opacity-85:hover {
     opacity: 0.85;
@@ -1107,6 +1122,12 @@
     }
     .md\:grid-cols-2 {
       grid-template-columns: repeat(2,minmax(0,1fr));
+    }
+    .md\:grid-cols-3 {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+    .md\:grid-cols-4 {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
     .md\:grid-cols-5 {
       grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -1234,6 +1255,9 @@
   }
   .dark .dark\:hover\:bg-slate-800:hover {
     background-color: var(--color-slate-800);
+  }
+  .dark .dark\:hover\:bg-indigo-400:hover {
+    background-color: var(--color-indigo-400);
   }
   .dark .dark\:hover\:bg-green-600:hover {
     background-color: var(--color-green-600);
