--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -957,6 +957,9 @@
   .text-red-600 {
     color: var(--color-red-600);
   }
+  .text-purple-500 {
+    color: var(--color-purple-500);
+  }
   .text-slate-400 {
     color: var(--color-slate-400);
   }
