--- a/assets/style/custom.css
+++ b/assets/style/custom.css
@@ -5,6 +5,7 @@
   :root, :host {
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --color-red-300: oklch(80.8% 0.114 19.571);
     --color-red-500: oklch(63.7% 0.237 25.331);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-blue-500: oklch(63.7% 0.15 250);
@@ -713,6 +714,9 @@
   .ring-green-500 {
     --tw-ring-color: rgba(16, 185, 129, var(--tw-ring-opacity));
   }
+  .border-red-300 {
+    border-color: var(--color-red-300);
+  }
   .border-indigo-300 {
     border-color: var(--color-indigo-300);
   }
@@ -772,6 +776,9 @@
   }
   .bg-green-600 {
     background-color: var(--color-green-600);
+  }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
   }
   .bg-yellow-500 {
       background-color: var(--color-yellow-500);
@@ -959,6 +966,9 @@
   }
   .text-purple-500 {
     color: var(--color-purple-500);
+  }
+  .text-slate-100 {
+    color: var(--color-slate-100);
   }
   .text-slate-400 {
     color: var(--color-slate-400);
